# libopenbme

./: AUTHORS  ChangeLog  Makefile.am  NEWS  bmeipc.pc.in  bmeipccookie.pc.in  configure.ac  libbmeipc.ver  libopenbmeipc.ver
include/: bmeipc-internal.h  bmeipc.h  bmeipccookie.h  bmemsg.h  global.h  type_def.h
src/: bmeipc.c  bmeipccookie.c
